# apis-instance-hmg

./: .gitignore  README.md  manage.py  pyproject.toml
apis_ontology/: models.py  settings.py  tables.py  urls.py
apis_ontology/locale/de/LC_MESSAGES/: django.po
apis_ontology/management/commands/: 01_populate_vocabulary.py  02_import_events.py
apis_ontology/migrations/: 0001_initial.py  0002_alter_place_kind.py  0003_remove_versionplace_kind_history_and_more.py  0004_versionplace_versionplace_kind.py  0005_rename_history_place_place_history_and_more.py  0006_alter_event_category.py  0007_alter_person_gender_alter_versionperson_gender.py  0008_title_abbreviation.py  0009_glossar_alter_title_options_alter_place_feature_code_and_more.py  0010_insigne_versioninsigne_versioninsigne_glossar_terms.py  0011_insignelocatedatplace_insignepossessedbybureau_and_more.py  0012_add_bionote.py  0013_person_attended_military_basic_education_and_more.py  0014_nobility_versionnobility.py  0015_honoursentity_versionhonoursentity_and_more.py  0016_copy_honours_to_honoursentity.py  0017_personhashonours_versionpersonhashonours_and_more.py  0018_create_personhashonours_records.py  0019_alter_person_honours.py  0020_personhashonours_in_relation_to_and_more.py  0021_event_description_versionevent_description_and_more.py
apis_ontology/settings/: settings.py
apis_ontology/static/styles/: hmg.css
apis_ontology/templates/: base.html
docs/: index.md
