[project]
name = "apis-instance-hgm"
version = "0.1.0"
description = "He(e)r mit Geschichte"
authors = [{ name = "Saranya Balasubramanian" }]
license = "MIT"
readme = "README.md"
requires-python = ">3.11"
packages = [{include = "apis_ontology"}]
dependencies = [
    "apis-core-rdf==0.48.2",
    "apis-acdhch-default-settings==2.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apis_ontology"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
