[project]
name = "apis-instance-hgm"
version = "0.1.0"
description = "He(e)r mit Geschichte"
authors = [{ name = "Saranya Balasubramanian" }]
license = "MIT"
readme = "README.md"
requires-python = ">3.11"
packages = [{include = "apis_ontology"}]
dependencies = [
    "apis-core-rdf==0.50.0",
    "apis-acdhch-default-settings==2.11.0",
    "psycopg2>=2.9.10",
    "django-interval>=0.5.1",
    "apis-bibsonomy>=0.13.2",
    "tablib[xlsx]==3.8.0",
    "tabulate>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apis_ontology"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
